--- a/medial-queries1/index.html
+++ b/medial-queries1/index.html
@@ -7,9 +7,18 @@
   </head>
   <body>
     <div class="container">
-      <div class="a"></div>
-      <div class="b"></div>
-      <div class="c"></div>
+      <div class="a">a</div>
+      <div class="b">b</div>
+      <div class="c">c</div>
+    </div>
+    <div class="container1">
+      <div class="a1">a</div>
+      <div class="div1">
+        <div class="b1">b</div>
+        <div class="c1">c</div>
+      </div>
+        
+      
     </div>
   </body>
 </html>
